macros/tests/ui/gservice_fails_multiple_not_allowed.stderr
error: multiple `gservice` attributes are not allowed
  --> tests/ui/gservice_fails_multiple_not_allowed.rs:13:1
   |
13 | impl MyService {
   | ^^^^
